[package]
name = "lineeditor"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/amrdeveloper/lineeditor"
license = "MIT"
authors = ["AmrDeveloper"]
description = "A cross platform line editor"
readme = "README.md"
keywords = ["line-editor", "gitql"]
categories = ["command-line-utilities"]

[lib]
doctest = true

[dependencies]
crossterm = "0.27.0"
clipboard = "0.5.0"
