[package]
name = "lineeditor"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/amrdeveloper/lineeditor"
license = "MIT"
authors = ["AmrDeveloper"]
description = "A cross platform rich line editor"
readme = "README.md"
keywords = ["line-editor", "gitql", "cli", "rich-editor"]
categories = ["command-line-utilities"]

[lib]
doctest = true

[dependencies]
crossterm = "0.28.1"
clipboard = "0.5.0"
